# information-retrieval

./: .gitignore  README.md  docker-compose.yaml  env.docker  modified_BEIR_for_dutch_evaluations.ipynb  pyproject.toml  schema.json
t2v-transformers/: Dockerfile
t2v-transformers/docker/: entrypoint.sh
vectorsearch_benchmark/: data_loader.py  evaluation.py  evaluation_metrics_scifact_multilingual-e5-small_alpha=1.json  ingestion.py  util.py
vectorsearch_benchmark/output/: evaluation_metrics_scifact_multilingual-e5-small_alpha=0.json  evaluation_metrics_scifact_multilingual-e5-small_alpha=1.json
